tests/baselines/reference/parserSuperExpression2.errors.txt
tests/cases/conformance/parser/ecmascript5/SuperExpressions/parserSuperExpression2.ts(3,5): error TS2335: 'super' can only be referenced in a derived class.
tests/cases/conformance/parser/ecmascript5/SuperExpressions/parserSuperExpression2.ts(3,10): error TS1034: 'super' must be followed by an argument list or member access.
tests/cases/conformance/parser/ecmascript5/SuperExpressions/parserSuperExpression2.ts(3,11): error TS2304: Cannot find name 'T'.


==== tests/cases/conformance/parser/ecmascript5/SuperExpressions/parserSuperExpression2.ts (3 errors) ====
    class C {
      M() {
        super<T>(0);
        ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
             ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
              ~
!!! error TS2304: Cannot find name 'T'.
      }
    }